working crawler, with 南交所 & 江苏所

--- a/ybk/crawlers/zgqbyp.yaml
+++ b/ybk/crawlers/zgqbyp.yaml
@@ -1,11 +1,19 @@
-home: www.zgqbyp.com
+url: www.zgqbyp.com
 name: 南京文交所钱币邮票交易中心
 abbr: 南交所
 offer:
     index: http://www.zgqbyp.com/web/news/108.html
-    detail: href="?(?P<url>http://www.zgqbyp.com/html/\d+-\d+/\d+\.html)"?[^>]*>(?P<title>)</a> 
+    relative: http://www.zgqbyp.com/
+    detail: <span>(\d+-\d+-\d+).*?(html/\d+-\d+/\d+.html)[^>]*>([^>]+)</a>
+    fields: [published_at, url, title]
+    encoding: gb2312
     page: http://www.zgqbyp.com/web/news/108_{page}.html
+    maxpage: 20
 result:
     index: http://www.zgqbyp.com/web/news/10.html 
-    detail: (?P<url>html/\d+-\d+/\d+.html)[^>]*>[^<]*中签[^<]*</a>
+    relative: http://www.zgqbyp.com/
+    detail: <span>(\d+-\d+-\d+).*?(html/\d+-\d+/\d+.html)[^>]*>([^>]*中签[^>]*)</a>
+    fields: [published_at, url, title]
+    encoding: gb2312
     page: http://www.zgqbyp.com/web/news/10_{page}.html
+    maxpage: 20
