first flask app structure

--- a/ybk/crawlers/jscaee.yaml
+++ b/ybk/crawlers/jscaee.yaml
@@ -1,6 +1,6 @@
 url: ybk.jscaee.com.cn
 name: 江苏省文化产权交易所邮币卡交易中心
-abbr: 江苏所
+abbr: 江苏文交所
 offer:
     index: http://ybk.jscaee.com.cn/announcement/listing/
     relative: http://ybk.jscaee.com.cn
