--- a/ybk/crawlers/shscce.yaml
+++ b/ybk/crawlers/shscce.yaml
@@ -1,6 +1,6 @@
 url: www.shscce.com
 name: 上海邮币卡交易中心
-abbr: 上邮所
+abbr: 上海邮币卡
 offer:
     index: http://www.shscce.com/html/shscce/zxgg/index_1.shtml
     relative: http://ybk.jscaee.com.cn
