--- a/ybk/crawlers/zgqbyp.yaml
+++ b/ybk/crawlers/zgqbyp.yaml
@@ -1,6 +1,6 @@
 url: www.zgqbyp.com
 name: 南京文交所钱币邮票交易中心
-abbr: 南交所
+abbr: 南京文交所
 offer:
     index: http://www.zgqbyp.com/web/news/108.html
     relative: http://www.zgqbyp.com/
