--- a/ybk/crawlers/shscce.yaml
+++ b/ybk/crawlers/shscce.yaml
@@ -3,7 +3,7 @@ name: 上海邮币卡交易中心
 abbr: 上海邮币卡
 offer:
     index: http://www.shscce.com/html/shscce/zxgg/index_1.shtml
-    relative: http://ybk.jscaee.com.cn
+    relative: http://www.shscce.com
     detail: <span>(\d+-\d+-\d+)</span><a .*?"(/html/shscce/zxgg/\d+_\d+.shtml)" title="([^"]+申购的[^"]+)"
     fields: [published_at, url, title]
     encoding: utf-8
@@ -11,7 +11,7 @@ offer:
     maxpage: 3
 result:
     index: http://www.shscce.com/html/shscce/zxgg/index_1.shtml
-    relative: http://ybk.jscaee.com.cn
+    relative: http://www.shscce.com
     detail: <span>(\d+-\d+-\d+)</span><a .*?"(/html/shscce/zxgg/\d+_\d+.shtml)" title="([^"]+申购中签[^"]+)"
     fields: [published_at, url, title]
     encoding: utf-8
