--- a/ybk/crawlers/jinmajia.yaml
+++ b/ybk/crawlers/jinmajia.yaml
@@ -3,7 +3,7 @@ name: 金马甲
 abbr: 金马甲
 offer:
     index: http://qbyp.jinmajia.com/article/mtbd/qbyp/gggs/sggp/
-    relative: http://ybk.hncae.net
+    relative: http://qbyp.jinmajia.com
     detail: href="([^"]+)" class="artitlelist">([^>]*申购公告[^>]*)</a><span class="timedefault">(\d+-\d+-\d+)</span>
     fields: [url, title, published_at]
     encoding: utf-8
@@ -11,7 +11,7 @@ offer:
     maxpage: 3
 result:
     index: http://qbyp.jinmajia.com/article/mtbd/qbyp/gggs/sggp/
-    relative: http://ybk.hncae.net
+    relative: http://qbyp.jinmajia.com
     detail: href="([^"]+)" class="artitlelist">([^>]*申购中签[^>]*)</a><span class="timedefault">(\d+-\d+-\d+)</span>
     fields: [url, title, published_at]
     encoding: utf-8
