fix shscce publish date error

--- a/ybk/crawlers/shscce.yaml
+++ b/ybk/crawlers/shscce.yaml
@@ -4,7 +4,7 @@ abbr: 上海邮币卡
 offer:
     index: http://www.shscce.com/html/shscce/zxgg/index_1.shtml
     relative: http://www.shscce.com
-    detail: <span>(\d+-\d+-\d+)</span><a .*?"(/html/shscce/zxgg/\d+_\d+.shtml)" title="([^"]+申购的[^"]+)"
+    detail: <span>(\d+-\d+-\d+)</span><a[^>]*"(/html/shscce/zxgg/\d+_\d+.shtml)" title="([^"]+申购的[^"]+)"
     fields: [published_at, url, title]
     encoding: utf-8
     page: http://www.shscce.com/html/shscce/zxgg/index_{page}.shtml
@@ -12,7 +12,7 @@ offer:
 result:
     index: http://www.shscce.com/html/shscce/zxgg/index_1.shtml
     relative: http://www.shscce.com
-    detail: <span>(\d+-\d+-\d+)</span><a .*?"(/html/shscce/zxgg/\d+_\d+.shtml)" title="([^"]+申购中签[^"]+)"
+    detail: <span>(\d+-\d+-\d+)</span><a[^>]*"(/html/shscce/zxgg/\d+_\d+.shtml)" title="([^"]+申购中签[^"]+)"
     fields: [published_at, url, title]
     encoding: utf-8
     page: http://www.shscce.com/html/shscce/zxgg/index_{page}.shtml
