--- a/ybk/crawlers/nfqbyp.yaml
+++ b/ybk/crawlers/nfqbyp.yaml
@@ -17,3 +17,10 @@ result:
     encoding: utf-8
     page: http://www.nfqbyp.com/infomation.html?pageIndex={page}&newsTypeID=17509&newsType=%E7%94%B3%E8%B4%AD%E6%8C%82%E7%89%8C
     maxpage: 3
+opening:
+    url: http://www.nfqbyp.com/guide.html?newsTypeID=16795&newsType=%E7%BD%91%E4%B8%8A%E5%BC%80%E6%88%B7
+    guide: http://www.nfqbyp.com/guide.html?newsTypeID=16799&newsType=%E9%97%AE%E9%A2%98%E8%A7%A3%E7%AD%94
+    bank: [建设银行, 农业银行, 中国银行, 平安银行]
+    code: [4400000157, ???, 无, 无]
+    name: [广东省南方文化产权交易所有限公司, ???, 广东省南方文化产权交易所有限公司, 南方文化产权交易中心]
+    download: http://www.nfqbyp.com/displaynews.html?newsID=255207
