--- a/ybk/crawlers/shscce.yaml
+++ b/ybk/crawlers/shscce.yaml
@@ -17,3 +17,10 @@ result:
     encoding: utf-8
     page: http://www.shscce.com/html/shscce/zxgg/index_{page}.shtml
     maxpage: 3
+opening:
+    url: http://uc.shscce.com/custm/user/user_reg_add.htm
+    guide: http://www.shscce.com/html/shscce/rszn/1962_1.shtml
+    bank: [建设银行, 浦发银行, 交通银行, 兴业银行, 稠州银行]
+    code: [3100000155, 08100000, SPMS000024, 900214, 15601001]
+    name: [上海邮币卡交易中心股份有限公司, 邮币卡中心, 上海邮币卡交易中心股份有限公司, 上海邮币卡交易中心, 上海邮币卡交易中心]
+    download: http://www.shscce.com/html/shscce/rjxzJyzn/index_1.shtml
