delete ??? from yaml: yaml will panic on ?s

--- a/ybk/crawlers/jscaee.yaml
+++ b/ybk/crawlers/jscaee.yaml
@@ -22,5 +22,5 @@ opening:
     guide: http://ybk.jscaee.com.cn/guide/accounting-process/2014-03/21/03214R014.html
     bank: [工商银行, 华夏银行, 交通银行]
     code: [00001163, 250008, SPMS000018]
-    name: [???, ???, ???]
+    name: ["", "", ""]
     download: http://ybk.jscaee.com.cn/guide/downloads/2014-04/01/0401I2014.html
