--- a/ybk/crawlers/zgqbyp.yaml
+++ b/ybk/crawlers/zgqbyp.yaml
@@ -21,6 +21,6 @@ opening:
     url: http://www.zgqbyp.com/kh/
     guide: http://www.zgqbyp.com/web/news/35.html
     bank: [工商银行, 农业银行, 平安银行]
-    code: [00001162, ???, 无]
-    name: [南京文化艺术产权交易所有限公司, ???, 南京文化艺术产权交易所有限公司]
+    code: [00001162, "", 无]
+    name: [南京文化艺术产权交易所有限公司, "", 南京文化艺术产权交易所有限公司]
     download: http://www.zgqbyp.com/html/2014-3/201431154.html
