--- a/ybk/crawlers/zrxtjs.yaml
+++ b/ybk/crawlers/zrxtjs.yaml
@@ -21,6 +21,6 @@ opening:
     url: http://www.zrxtjs.com/kaihu.asp
     guide: http://www.zrxtjs.com/about/66.html
     bank: [农业银行]
-    code: [??]
+    code: [""]
     download: http://www.zrxtjs.com/downs/80.html
 
