--- a/ybk/crawlers/nfqbyp.yaml
+++ b/ybk/crawlers/nfqbyp.yaml
@@ -21,6 +21,6 @@ opening:
     url: http://www.nfqbyp.com/guide.html?newsTypeID=16795&newsType=%E7%BD%91%E4%B8%8A%E5%BC%80%E6%88%B7
     guide: http://www.nfqbyp.com/guide.html?newsTypeID=16799&newsType=%E9%97%AE%E9%A2%98%E8%A7%A3%E7%AD%94
     bank: [建设银行, 农业银行, 中国银行, 平安银行]
-    code: [4400000157, ???, 无, 无]
-    name: [广东省南方文化产权交易所有限公司, ???, 广东省南方文化产权交易所有限公司, 南方文化产权交易中心]
+    code: [4400000157, "", 无, 无]
+    name: [广东省南方文化产权交易所有限公司, "", 广东省南方文化产权交易所有限公司, 南方文化产权交易中心]
     download: http://www.nfqbyp.com/displaynews.html?newsID=255207
