--- a/ybk/conf.d/zghqwh.yaml
+++ b/ybk/conf.d/zghqwh.yaml
@@ -2,20 +2,20 @@ url: http://www.zghqwh.com
 name: 华强文化艺术品交易中心
 abbr: 华强文交所
 offer:
-    index: http://www.zghqwh.com/list.asp?id=2
+    index: http://www.zghqwh.com/web/sggg/
     relative: http://www.zghqwh.com/
-    detail: (\d+-\d+-\d+)</span>\s+<a href="([^"]+)"[^>]*>([^<]*挂牌交易[^<]*)</a>
+    detail: (\d+-\d+-\d+)</span>\s*<a href=../../([^>]+html)[^>]*>([^<]*挂牌交易[^<]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
-    page: http://www.zghqwh.com/list.asp?id=2&page={page}
+    page: http://www.zghqwh.com/web/sggg/
     maxpage: 1
 result:
-    index: http://www.zghqwh.com/list.asp?id=2
+    index: http://www.zghqwh.com/web/sggg/
     relative: http://www.zghqwh.com/
-    detail: (\d+-\d+-\d+)</span>\s+<a href="([^"]+)"[^>]*>([^<]*中签[^<]*)</a>
+    detail: (\d+-\d+-\d+)</span>\s*<a href=../../([^>]+html)[^>]*>([^<]*中签[^<]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
-    page: http://www.zghqwh.com/list.asp?id=2&page={page}
+    page: http://www.zghqwh.com/web/sggg/
     maxpage: 1
 opening:
     url: http://www.zghqwh.com/kh/
