change wjybk name to 福丽特

--- a/ybk/conf.d/wjybk.yaml
+++ b/ybk/conf.d/wjybk.yaml
@@ -1,6 +1,6 @@
 url: http://dzp.wjybk.com
 name: 北交所福丽特邮币交易平台
-abbr: 福利特
+abbr: 福丽特
 offer:
     index: http://dzp.wjybk.com/?action-category-catid-127
     relative: http://dzp.wjybk.com
