--- a/ybk/conf.d/hbcpre.yaml
+++ b/ybk/conf.d/hbcpre.yaml
@@ -2,13 +2,13 @@ url: http://www.hbcpre.com
 name: 湖北华中文化产权交易所
 abbr: 华中文交所
 offer:
-    index: http://www.hbcpre.com/index.php/index-show-tid-27.html
+    index: http://www.hbcpre.com/index.php/index-show-tid-26.html
     relative: http://www.hbcpre.com
-    detail: (\d+-\d+-\d+)</span><a href="([^"]+)">([^>]+)</a>
+    detail: (\d+-\d+-\d+)</span><a href="([^"]+)">([^>]*申购公告[^>]*)</a>
     fields: [published_at, url, title]
     encoding: utf-8
-    page: http://www.hbcpre.com/index.php/index-show-tid-27-p-{page}.html
-    maxpage: 2
+    page: http://www.hbcpre.com/index.php/index-show-tid-26-p-{page}.html
+    maxpage: 5
 result:
     index: http://www.hbcpre.com/index.php/index-show-tid-26.html
     relative: http://www.hbcpre.com
