--- a/ybk/conf.d/zghqwh.yaml
+++ b/ybk/conf.d/zghqwh.yaml
@@ -24,3 +24,10 @@ opening:
     code: [00001212, 4300000194, 999307]
     name: [湖南华强文化艺术品交易中心有限责任公司, 湖南华强文化艺术品交易中心有限责任公司, 湖南华强文化艺术品交易中心有限责任公司]
     download: http://www.zghqwh.com/about.asp?id=33
+quote:
+    realtime:
+        url: http://180.96.50.179:16925/tradeweb/hq/getHqV_lbData.jsp
+        type: getHqV_lbData
+    history:
+        url: http://180.96.50.179:16914
+        type: http
