--- a/ybk/conf.d/dfqbyp.yaml
+++ b/ybk/conf.d/dfqbyp.yaml
@@ -34,8 +34,8 @@ opening:
     download: http://118.145.4.144/web/news/news_down.jsp
 quote:
     realtime:
-        url: 
-        type: 
+        url: http://118.145.4.144:16933/tradeweb/hq/getHqV_lbData.jsp
+        type: getHqV_lbData
     history:
         url: 
         type: 
