--- a/ybk/conf.d/hbcpre.yaml
+++ b/ybk/conf.d/hbcpre.yaml
@@ -30,4 +30,4 @@ quote:
         type: getHqV_lbData
     history:
         url: http://61.183.138.62:19914
-        type: http
+        type: sysframe
