--- a/ybk/conf.d/hxce.yaml
+++ b/ybk/conf.d/hxce.yaml
@@ -29,6 +29,6 @@ quote:
         url: http://ta.hxce.cn/front/hq/delay_hq.htm
         type: delay_hq
     history:
-        url:
-        type:
+        url: tcp://117.78.0.23:7002
+        type: winner
 
