--- a/ybk/conf.d/nccaee.yaml
+++ b/ybk/conf.d/nccaee.yaml
@@ -3,7 +3,7 @@ name: 南昌文化产权邮币卡交易中心
 abbr: 南昌文交所
 stock:
     index: http://ybk.nccaee.com/web/news/news.jsp?parentid=44&classid=44
-    relative: http://ybk.nccaee.com/
+    relative: http://ybk.nccaee.com
     detail: <a href="([^"]+)"[^>]*>([^>]*入库申请[^>]*)</a></td>\s*<td[^>]*>\[(\d+-\d+-\d+)\]
     fields: [url, title, published_at]
     encoding: gb18030
@@ -11,7 +11,7 @@ stock:
     maxpage: 1
 offer:
     index: http://ybk.nccaee.com/web/news/news.jsp?parentid=44&classid=44
-    relative: http://ybk.nccaee.com/
+    relative: http://ybk.nccaee.com
     detail: <a href="([^"]+)"[^>]*>([^>]*申购[^>]*)</a></td>\s*<td[^>]*>\[(\d+-\d+-\d+)\]
     fields: [url, title, published_at]
     encoding: gb18030 
@@ -19,7 +19,7 @@ offer:
     maxpage: 1
 result:
     index: http://ybk.nccaee.com/web/news/news.jsp?parentid=44&classid=44
-    relative: http://118.145.4.144/
+    relative: http://ybk.nccaee.com
     detail: <a href="([^"]+)"[^>]*>([^>]*中签[^>]*)</a></td>\s*<td[^>]*>\[(\d+-\d+-\d+)\]
     fields: [url, title, published_at]
     encoding: gb18030
