--- a/ybk/conf.d/znypjy.yaml
+++ b/ybk/conf.d/znypjy.yaml
@@ -1,6 +1,14 @@
 url: http://www.znypjy.com
 name: 中南邮票交易中心
 abbr: 中南文交所
+stock:
+    index: http://www.znypjy.com/a/xinxipilu/tuoguangonggao/
+    relative: http://www.znypjy.com
+    detail: href="([^"]+)">([^<]*)</a><span>(\d+-\d+-\d+)
+    fields: [url, title, published_at]
+    encoding: utf-8
+    page: http://www.znypjy.com/a/xinxipilu/shengougonggao/list_9_{page}.html
+    maxpage: 1
 offer:
     index: http://www.znypjy.com/a/xinxipilu/shengougonggao/
     relative: http://www.znypjy.com
