--- a/ybk/conf.d/hbcpre.yaml
+++ b/ybk/conf.d/hbcpre.yaml
@@ -1,6 +1,14 @@
 url: http://www.hbcpre.com
 name: 湖北华中文化产权交易所
 abbr: 华中文交所
+stock:
+    index: http://www.hbcpre.com/index.php/index-show-tid-26.html
+    relative: http://www.hbcpre.com
+    detail: (\d+-\d+-\d+)</span><a href="([^"]+)">([^>]*托管[^>]*)</a>
+    fields: [published_at, url, title]
+    encoding: utf-8
+    page: http://www.hbcpre.com/index.php/index-show-tid-26-p-{page}.html
+    maxpage: 5
 offer:
     index: http://www.hbcpre.com/index.php/index-show-tid-26.html
     relative: http://www.hbcpre.com
