--- a/ybk/conf.d/nfqbyp.yaml
+++ b/ybk/conf.d/nfqbyp.yaml
@@ -1,6 +1,14 @@
 url: http://www.nfqbyp.com
 name: 广东省南方文化产权交易所钱币邮票交易中心
 abbr: 南方文交所
+stock:
+    index: http://www.nfqbyp.com/infomation.html?newsTypeID=17558&newsType=%E6%89%98%E7%AE%A1%E5%85%AC%E5%91%8A
+    relative: http://www.nfqbyp.com
+    detail: <a href="(/displaynews.html\?newsID=\d+)" target="_blank" title="([^"]*)">[^<]*</a><span class="date">\[(\d+-\d+-\d+)\]</span>
+    fields: [url, title, published_at]
+    encoding: utf-8
+    page: http://www.nfqbyp.com/infomation.html?pageIndex={page}&newsTypeID=17509&newsType=%E7%94%B3%E8%B4%AD%E6%8C%82%E7%89%8C
+    maxpage: 4
 offer:
     index: http://www.nfqbyp.com/infomation.html?newsTypeID=17509&newsType=%E7%94%B3%E8%B4%AD%E6%8C%82%E7%89%8C
     relative: http://www.nfqbyp.com
