--- a/ybk/conf.d/jscaee.yaml
+++ b/ybk/conf.d/jscaee.yaml
@@ -1,6 +1,14 @@
 url: http://ybk.jscaee.com.cn
 name: 江苏省文化产权交易所邮币卡交易中心
 abbr: 江苏文交所
+stock:
+    index: http://ybk.jscaee.com.cn/announcement/trusteeship/
+    relative: http://ybk.jscaee.com.cn
+    detail: (/announcement/trusteeship/(\d+-\d+/\d+)/\w+.html)"?>([^>]+)</a>
+    fields: [url, published_at, title]
+    encoding: utf-8
+    page: http://ybk.jscaee.com.cn/announcement/trusteeship/index_p{page}.html
+    maxpage: 1
 offer:
     index: http://ybk.jscaee.com.cn/announcement/listing/
     relative: http://ybk.jscaee.com.cn
