add stock(empty) for 海西文交所

--- a/ybk/conf.d/hxce.yaml
+++ b/ybk/conf.d/hxce.yaml
@@ -1,6 +1,14 @@
 url: http://ybk.hxce.cn
 name: 海西商品交易所邮币卡交易中心
 abbr: 海西文交所
+stock:
+    index: http://ybk.hxce.cn/html/xxpl/tggg/
+    relative: http://ybk.hxce.cn
+    detail: href="(/html/xxpl/tggg/(\d+-\d+-\d+)/\w+.html)" title="([^"]*)"
+    fields: [url, published_at, title]
+    encoding: GBK
+    page: http://ybk.hxce.cn/html/xxpl/tggg/index_{page}.html
+    maxpage: 4
 offer:
     index: http://ybk.hxce.cn/html/xxpl/sggg/
     relative: http://ybk.hxce.cn
